// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comment-empty-line-before не ошибки индекс теста: 0 1`] = `Array []`;

exports[`comment-empty-line-before не ошибки индекс теста: 0 2`] = `Array []`;

exports[`comment-empty-line-before не ошибки индекс теста: 1 1`] = `Array []`;

exports[`comment-empty-line-before не ошибки индекс теста: 1 2`] = `Array []`;

exports[`comment-empty-line-before не ошибки индекс теста: 2 1`] = `Array []`;

exports[`comment-empty-line-before не ошибки индекс теста: 2 2`] = `Array []`;

exports[`comment-empty-line-before ошибки индекс теста: 0 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 14,
    "endLine": 4,
    "line": 4,
    "rule": "comment-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before comment (comment-empty-line-before)",
  },
]
`;

exports[`comment-empty-line-before ошибки индекс теста: 0 2`] = `Array []`;

exports[`comment-empty-line-before ошибки индекс теста: 1 1`] = `
Array [
  Object {
    "column": 4,
    "endColumn": 17,
    "endLine": 3,
    "line": 3,
    "rule": "comment-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before comment (comment-empty-line-before)",
  },
]
`;

exports[`comment-empty-line-before ошибки индекс теста: 1 2`] = `Array []`;
